[package]
name = "r_phy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
bytemuck = "1.14.3"
colored = "2.1.0"
serde = "1.0.197"
winit = "0.29.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["windef"] }
