[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytemuck = { workspace = true }
glob = "0.3.1"
gltf = "1.4.0"
serde = "1.0.197"
winit = { workspace = true }
math = { path = "../math" }
input = { path = "../input" }
type_list = { path = "../type_list" }
physics = { path = "../physics" }
colored = { workspace = true }
to_resolve = { path = "../to_resolve" }
vulkan = { path = "../vulkan" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["windef"] }
