[package]
name = "r_phy"
version = "0.1.0"
edition = "2021"
default-run = "r_phy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
base64 = "0.22.0"
bytemuck = { workspace = true }
colored = "2.1.0"
glob = "0.3.1"
gltf = "1.4.0"
png = "0.17.13"
serde = "1.0.197"
strum = { version = "0.26.1", features = ["derive"] }
winit = "0.29.10"
math = { path = "../math" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["windef"] }
