[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
default-run = "sandbox"

[dependencies]
math = { path = "../math" }
system = { path = "../system" }
winit = { workspace = true }
physics = { path = "../physics" }
graphics = { path = "../graphics" }
to_resolve = { path = "../to_resolve" }
vulkan = { path = "../vulkan" }
